<resources>
    <string name="app_name">Faker</string>
    <string name="name">Name</string>
    <string name="mail">Mail</string>

    <string name="toolbar_title_one">从者礼装信息</string>
    <string name="search">Search</string>
    <string name="filter">筛选</string>
    <string name="filter_rank">按星级</string>
    <string name="rank0">0</string>
    <string name="rank1">1</string>
    <string name="rank2">2</string>
    <string name="rank3">3</string>
    <string name="rank4">4</string>
    <string name="rank5">5</string>
    <string name="filter_class">按职阶</string>
    <string name="class_shielder">盾阶</string>
    <string name="class_saber">剑阶</string>
    <string name="class_archer">弓阶</string>
    <string name="class_lance">枪阶</string>
    <string name="class_rider">骑阶</string>
    <string name="class_cater">术阶</string>
    <string name="class_assassin">杀阶</string>
    <string name="class_berserker">狂阶</string>
    <string name="class_ruler">裁阶</string>
    <string name="class_avenger">仇阶</string>
    <string name="class_moon_cancer">MC阶</string>
    <string name="class_alterego">AE阶</string>
    <string name="class_foreigner">降临阶</string>
    <string name="class_beast">兽阶</string>


    <!--基础信息-->
    <string name="base_rank">星级</string>
    <string name="base_class">职阶</string>

    <!--礼装信息-->
    <string name="name_v">礼装名称</string>
    <string name="rank_v">星级</string>
    <string name="cost_v">cost</string>
    <string name="painter_v">绘师</string>
    <string name="atkBase_v">基础ATK</string>
    <string name="hpBase_v">基础HP</string>
    <string name="atkMax_v">最大ATK</string>
    <string name="hpMax_v">最大HP</string>
    <string name="skillBase_v">固有技能</string>
    <string name="skillMax_v">界限突破</string>
    <string name="description_v">解说</string>

</resources>
