<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/line1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="@+id/linearLayout"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/linearLayout"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout">

            <TextView
                android:id="@+id/name_v"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/name_v"
                android:textAlignment="center"
                tools:layout_editor_absoluteX="303dp"
                tools:layout_editor_absoluteY="51dp" />

            <TextView
                android:id="@+id/rank_v"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/rank_v"
                android:textAlignment="center"
                tools:layout_editor_absoluteX="303dp"
                tools:layout_editor_absoluteY="97dp" />

            <TextView
                android:id="@+id/cost_v"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cost_v"
                android:textAlignment="center"
                tools:layout_editor_absoluteX="220dp"
                tools:layout_editor_absoluteY="97dp" />

            <TextView
                android:id="@+id/painter_v"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/painter_v"
                android:textAlignment="center"
                tools:layout_editor_absoluteX="141dp"
                tools:layout_editor_absoluteY="97dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="TextView"
                android:textAlignment="center"
                tools:layout_editor_absoluteX="141dp"
                tools:layout_editor_absoluteY="51dp" />

            <TextView
                android:id="@+id/rank"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="TextView"
                android:textAlignment="center"
                tools:layout_editor_absoluteX="63dp"
                tools:layout_editor_absoluteY="97dp" />

            <TextView
                android:id="@+id/cost"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="TextView"
                android:textAlignment="center"
                tools:layout_editor_absoluteX="63dp"
                tools:layout_editor_absoluteY="51dp" />

            <TextView
                android:id="@+id/painter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="TextView"
                android:textAlignment="center"
                tools:layout_editor_absoluteX="220dp"
                tools:layout_editor_absoluteY="49dp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/line2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="@+id/line1"
        app:layout_constraintStart_toStartOf="@+id/line1"
        app:layout_constraintTop_toBottomOf="@+id/line1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="@+id/linearLayout"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/linearLayout"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout">

            <TextView
                android:id="@+id/atk_base_v"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/atkBase_v"
                android:textAlignment="center"
                tools:layout_editor_absoluteX="303dp"
                tools:layout_editor_absoluteY="51dp" />

            <TextView
                android:id="@+id/hp_base_v"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/hpBase_v"
                android:textAlignment="center"
                tools:layout_editor_absoluteX="303dp"
                tools:layout_editor_absoluteY="97dp" />

            <TextView
                android:id="@+id/atk_max_v"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/atkMax_v"
                android:textAlignment="center"
                tools:layout_editor_absoluteX="220dp"
                tools:layout_editor_absoluteY="97dp" />

            <TextView
                android:id="@+id/hp_max_v"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/hpMax_v"
                android:textAlignment="center"
                tools:layout_editor_absoluteX="141dp"
                tools:layout_editor_absoluteY="97dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/atk_base"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="TextView"
                android:textAlignment="center"
                tools:layout_editor_absoluteX="141dp"
                tools:layout_editor_absoluteY="51dp" />

            <TextView
                android:id="@+id/hp_base"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="TextView"
                android:textAlignment="center"
                tools:layout_editor_absoluteX="63dp"
                tools:layout_editor_absoluteY="97dp" />

            <TextView
                android:id="@+id/atk_max"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="TextView"
                android:textAlignment="center"
                tools:layout_editor_absoluteX="63dp"
                tools:layout_editor_absoluteY="51dp" />

            <TextView
                android:id="@+id/hp_max"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="TextView"
                android:textAlignment="center"
                tools:layout_editor_absoluteX="220dp"
                tools:layout_editor_absoluteY="49dp" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/line3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@+id/line2"
        app:layout_constraintStart_toStartOf="@+id/line2"
        app:layout_constraintTop_toBottomOf="@+id/line2">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/skill_img"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/ic_favorite_white_24dp"
                tools:layout_editor_absoluteX="61dp"
                tools:layout_editor_absoluteY="128dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/skill_base_v"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/skillBase_v"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/skill_base"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="TextView"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/skill_max_v"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/skillMax_v"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/skill_max"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="TextView"
                android:textAlignment="center" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/line4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/line3"
        app:layout_constraintStart_toStartOf="@+id/line3"
        app:layout_constraintTop_toBottomOf="@+id/line3"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/description_v"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/description_v"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="TextView"
            android:textAlignment="center" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>